<resources>
    <string name="app_name">Sats</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_content_string">No content</string>
    <string name="refresh_btn_title">Refresh</string>
    <string name="my_training_actionbar_text">MIN TRÄNING</string>
    <string name="listrow_detail_completed_class_name_string">SATS CORE</string>
    <string name="listrow_detail_completed_class_date_string">Torsdag 25/3</string>
    <string name="listrow_detail_completed_class_comment_string">Lägg till kommentar</string>
    <string name="training_icon_description">Bild på träningsaktiviteten utförd</string>
    <string name="comment_description">Pratbubbla</string>
    <string name="done_description">Avklarad träning</string>
    <string name="listrow_detail_completed_class_completed_string">Avklarad!</string>
    <string name="add_to_calender_button_text">Lägg till i kalender</string>
    <string name="add_to_calender_image_description">En kalender knapp</string>
    <string name="about_the_class_description">Mer om passet bild</string>
    <string name="about_the_class_button_text">Mer om passet</string>
    <string name="listrow_detail_booked_class_minutes_length">30 min</string>
    <string name="listrow_detail_booked_class_minutes_text">10</string>
    <string name="listrow_detail_booked_class_hours_text">10</string>
    <string name="fitness_programme_description">En tränings kalender knapp</string>
    <string name="reload_btn_description">Reload button</string>
    <string name="listrow_detail_booked_private_time_icon_description">Time icon</string>
    <string name="listrow_detail_booked_private_comment_icon_description">Comment icon</string>
    <string name="menu_btn_title">Menu</string>
    <string name="menu_btn_sats_logo">satsLogo</string>
    <string name="menu_btn">Menu</string>
    <string name="my_training_activity">MIN TRÄNING</string>
    <string name="find_center">Hitta center</string>
    <string name="min_traning">Min träning</string>
    <string name="class_detail_center_question">Center:</string>
    <string name="class_detail_date_question">Datum:</string>
    <string name="class_detail_instructor_question">Instruktör:</string>
    <string name="class_detail_class_info_text">Latinamerikanska rytmer och rörelseglädje karaktäriserar denna heta dansklass. Join the party!</string>
    <string name="class_detail_condition_question">Kondition</string>
    <string name="class_detail_strength_question">Styrka</string>
    <string name="class_detail_movement_question">Rörlighet</string>
    <string name="class_detail_balance_question">Balans</string>
    <string name="class_detail_flexibility_question">Spänst</string>
    <string name="placeholder_graph_week">v.14</string>
    <string name="drawer_menu_content_description">Menu drawer icon</string>
    <string name="rosa_plupp">Pink flag</string>
</resources>
