<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <!-- Hela övre sektionen -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_body"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/clock_background"
                        android:layout_marginRight="3dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/listrow_detail_booked_class_hours_text"
                            android:id="@+id/listrow_detail_booked_class_time_hours"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/clock_background">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/listrow_detail_booked_class_minutes_text"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            android:id="@+id/listrow_detail_booked_class_time_minutes"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listrow_detail_booked_class_minutes_length"
                    android:id="@+id/listrow_detail_booked_class_duration_minutes"
                    android:padding="2dp"
                    android:textColor="@color/gray"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

            </LinearLayout>

            <!-- mid column layout -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2"
                android:layout_marginStart="5dp">

                <TextView
                    android:id="@+id/listrow_detail_booked_class_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SATS CORE"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/listrow_detail_booked_class_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:textColor="@color/gray"
                    android:text="Hornstull"/>

                <TextView
                    android:id="@+id/listrow_detail_booked_class_instructor_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:textColor="@color/gray"
                    android:text="Sven Svensson"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/listrow_detail_booked_class_cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/mytraining_details_round_button"
                    android:text="Avboka"
                    android:layout_gravity="end"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/listrow_detail_booked_class_person_queue"
                    android:layout_gravity="end"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="bild 20"/>

            </LinearLayout>


        </LinearLayout>

        <!-- Neder sektionen med knapparna -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/list_item_training_buttons"
                android:clickable="false">

                <LinearLayout
                    android:id="@+id/listrow_detail_booked_class_calender_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/add_to_calender_image_description"
                        android:src="@drawable/ic_calender"
                        android:id="@+id/listrow_detail_booked_class_calender_image"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingStart="5dp"
                        android:text="@string/add_to_calender_button_text"
                        android:textSize="8sp"/>

                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/list_item_training_buttons">

                <LinearLayout
                    android:id="@+id/listrow_detail_booked_class_about_class_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal"
                    android:clickable="true">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/about_the_class_description"
                        android:src="@drawable/ic_more"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingStart="5dp"
                        android:text="@string/about_the_class_button_text"
                        android:textSize="8sp"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>